1/1.12/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: todo-svc
              servicePort: 2345
